--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <img src="../../../../assets/pokeball.png" alt="Pokéball" class="pokeball">
         <h1>Pokédex</h1>
-        <span class="Text">Hecho con estrés por Barb</span>
+        <span class="Text">Hecho por Barb y Kev</span>
 
         <div class="Buscador">
         </div>
